--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WhoBomb</title>
+  <title>OpszBomb - бесплатный бомбер от t2sim!</title>
   <style>
     :root {
       --bg: linear-gradient(135deg, #12122a, #1e0d30);
